# FCRVote

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml  voting.db
docker/: Dockerfile  README.md  docker-compose.yml
src/back/: README.md  config.py  hello.py  main.py  utils.py
src/back/auth/: auth.py
src/back/database/: database.py
src/back/models/: models.py
src/back/routers/: admin.py  auth.py  users.py  voting.py  voting_sessions.py
src/back/schemas/: schemas.py
src/front/: README.md  package-lock.json  package.json
src/front/public/: index.html  manifest.json
src/front/src/: App.css  App.tsx  VotingApp.tsx  api.ts  types.ts
src/front/src/components/: AdminView.tsx  LoginForm.tsx  UserView.tsx
src/front/src/components/Views/: AdminView.tsx  LoginForm.tsx  ResultsView.tsx  UserView.tsx
src/front/src/components/style/: admin.css  button.css  card.css  header.css  input.css  label.css  login.css  results.css  unified.css  user.css
src/front/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  header.tsx  input.tsx  label.tsx
src/front/voting-frontend/: package.json
src/front/voting-frontend/src/: VotingApp.tsx
src/front/voting-frontend/src/components/ui/: button.tsx  card.tsx
src/tests/: add.py  sessions.py
