[project]
name = "FCRVote"
version = "0.1.0"
description = "A voting application for Fundacion Conchita Rabago"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "click>=8.2.1",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
fcrvote = "back.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/back"]
